// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Paragraph should be readOnly 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a key 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a label 1`] = `
<div class="form-group" data-field-name="textField"><label>label </label>
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a placeholder 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a spritemap 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a value 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have an id 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should not be required 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should render Label if showLabel is true 1`] = `
<div class="form-group" data-field-name="textField"><label>text </label>
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;
